--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: 未來的曾法靈先生
+description: 玩過兩天原神自號九真道人
 ---
 
 {% include header.html %}
